--- a/templates/note.html
+++ b/templates/note.html
@@ -13,7 +13,7 @@
 {#                <div class="avatar-group">#}
 {#                    <img src="{{ url_for('static', filename='images/2.png')}}" class="avatar">#}
 {#                </div>#}
-                <div class="note-group" style="width: 660px;margin-left: 138px;margin-top:50px;">
+                <div class="note-group" style="">
                     <p class="note-title" style="font-size: 30px;color: #5688ee;width: 100%;font-weight: 700;">
                         <a href="{{ url_for('note.detail', note_id=card.id) }}">{{ card.title }}</a>
                     </p>
