--- a/static/css/analysis_new_mission.css
+++ b/static/css/analysis_new_mission.css
@@ -1,5 +1,5 @@
 .search{
-    margin-top: -15px;
+    margin-top: 15px;
     border-style: dashed;
     border-color: #2e6da4;
     border-width: thin;
@@ -28,7 +28,7 @@
 }
 
 .pages{
-    margin-top: -20px;
-    margin-left: 32px;
+    width: 1000px;
+
 }
 
