--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,9 @@
 	margin: 0 auto;
 	padding: 0px;
 }
-
+body{
+    overflow-y: hidden;
+}
 ul li{
 	list-style: none;
 }
@@ -37,25 +39,22 @@ body{
 }
 
 .title-user{
-	height:40px;
+	height:50px;
 	background-color: #5688ee;
-	margin-top: -105px;
 	font-size: 30px;
 	color: white;
-	padding-left: 680px;
-	padding-top: 45px;
+    text-align: center;
+    line-height: 80px;
 }
 
 .navbar-user{
-	height: 20px;
 	background-color: #5688ee;
-	margin-top: 30px;
 }
 
 .navbar-user li{
 	float: right;
 	list-style: none;
-	width: 90px;
+    margin-right: 30px;
 }
 
 .navbar-user a{
@@ -153,13 +152,11 @@ a:hover{
     background-repeat: no-repeat;
     background-position: center;
 }
-
 #navbar-body ul p {
     width: 190px;
     text-align: left;
     color: #707070;
 }
-
 #navbar-body ul p:hover {
     width: 600px;
     background-color: #f4f8ff;
@@ -167,16 +164,14 @@ a:hover{
 }
 
 /*内容部分*/
-
 .main{
     overflow: hidden;
-
-    margin-left: 220px;
-
-    padding-top: 100px;
+    margin-left: 240px;
+    padding-top: 80px;
 }
 .page-title{
     text-align: center;
     color: #5688ee;
-        }
+    line-height: 60px;
+}
 
