--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,17 @@
+.search-main{
+    padding: 15px;
+}
+
+.search label{
+    padding: 10px 5px 10px 20px;
+}
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding: 4px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+/*
 .main{
 
     width: 1040px;
@@ -47,4 +61,4 @@ table caption{
     text-align: center;
 font-weight: bold}
 table td{word-break: keep-all;white-space:nowrap;}
-table thead{word-break: keep-all;white-space:nowrap;}
+table thead{word-break: keep-all;white-space:nowrap;}*/
