--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -8,20 +8,18 @@
 
 {% block main %}
 
-<div class="main">
-    <div class="content">
-        <div class="new_mission" style="float: left;">
+<div class="content" style="padding: 100px 250px;text-align: center;">
+    <div class="col-lg-6">
 
-            <a href="{{ url_for("analysis.new_mission_todos") }}">
+        <a href="{{ url_for("analysis.new_mission_todos") }}">
 
-                <img class="pic" src="{{url_for('static',filename='images/new_mission.png')}}">
-            </a>
-        </div>
-        <div class="data_search" style="float: right;">
-            <a href="{{ url_for("analysis.data_search") }}">
-                <img class="pic" src="{{url_for('static',filename='images/data_search.png')}}">
-            </a>
-        </div>
+            <img class="pic" src="{{url_for('static',filename='images/new_mission.png')}}">
+        </a>
+    </div>
+    <div class="col-lg-6">
+        <a href="{{ url_for("analysis.data_search") }}">
+            <img class="pic" src="{{url_for('static',filename='images/data_search.png')}}">
+        </a>
     </div>
 </div>
 
