--- a/templates/analysis_new_mission.html
+++ b/templates/analysis_new_mission.html
@@ -102,7 +102,7 @@
 </div>
 <div class="pages">
     <nav aria-label="Page navigation">
-      <ul class="pagination">
+      <ul class="pagination" style="margin: 10px 0;float: right;">
         {% if paginate.has_prev %}
             <li>
               <a href="/analysis/new_mission_todos/?page={{ paginate.prev_num }}" aria-label="Previous">
