--- a/templates/base.html
+++ b/templates/base.html
@@ -7,17 +7,13 @@
     <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/bootstrap.min.js')}}" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet"  href="{{url_for('static',filename='css/base.css')}}">
-
-           {% block head %}{% endblock %}
-
+    {% block head %}{% endblock %}
 </head>
 <body>
 	<div class="navbar-title" style="position:fixed;">
-		<div>
+		<div style="float: left;">
 			<a href="{{url_for('index.home')}}">
-
-				<img class="logo" src="{{url_for('static',filename='images/2.png')}}">
-
+                <img class="logo" src="{{url_for('static',filename='images/2.png')}}">
 	        </a>
     	</div>
         <div class="title-user">POI爬虫平台</div>
