--- a/templates/index.html
+++ b/templates/index.html
@@ -5,76 +5,70 @@
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/index.css') }}">
     <script src="{{ url_for('static',filename='js/city.js') }}" ></script>
-
     <script src="{{ url_for('static',filename='js/plotly.min.js') }}"></script>
 {% endblock %}
 
 {% block main %}
-
-<div class="search">
-<form action="/" method="POST">
-
-    <div class="form-group col-lg-6" style="float: left; width: 30%;">
-            <label for="scenes" style="float: left;">选择场景</label>
-                <select class="form-control col-lg-4" id="scenes" name="scene" >
-
-
-
-
+<div class="search-main">
+    <div class="search" style="border-bottom: 2px solid #ddd;">
+        <form action="/" method="POST" class="form-inline">
+            <div class="form-group">
+                <label for="scenes">选择场景</label>
+                <select class="form-control" id="scenes" name="scene" >
                     <option value="居民区">居民区</option>
                     <option value="医院">医院</option>
                     <option value="美食">美食</option>
                     <option value="美景">美景</option>
                 </select>
-
-    </div>
-        <div class="form-group col-lg-6" style="float: left; width: 30%;";>
-            <label for="province" style="float: left;">选择省份</label>
-            <select class="form-control col-lg-4" id="province" name="province" ></select>
-        </div>
-          <div class="form-group col-lg-6" style="float: left; width: 30%;";>
+            </div>
+            <div class="form-group">
+                <label for="province">选择省份</label>
+                <select class="form-control" id="province" name="province" ></select>
+            </div>
+            <div class="form-group">
                 <label for="city">选择城市</label>
-                <select class="form-control col-lg-4" id="city" name="city"></select>
-          </div>
-       <input type="submit" class="btn btn-default" style="margin-left: 585px;">
-</form>
-</div>
-            {% with messages = get_flashed_messages() %}
-          {% if messages %}
+                <select class="form-control" id="city" name="city"></select>
+            </div>
+            <input type="submit" class="btn btn-default" style="margin-top: -3px;">
+        </form>
+    </div>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
             <ul class=flashes style="margin-top: 300px">
-            {% for message in messages %}
-              <li>{{ message }}</li>
-            {% endfor %}
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
             </ul>
-          {% endif %}
-        {% endwith %}
-<div class="tableleft">
+        {% endif %}
+    {% endwith %}
+<div class="col-lg-6">
     <form action="/" method="post">
-<div class="table-responsive " style="overflow: scroll; height: 500px;margin-top: 10px;">
-
-                <table class="table table-striped table-sm">
-                 <caption>数据库数据</caption>
+        <div style="line-height: 40px;font-size: 18px;font-weight: bold;color:#5688ee;">数据列表</div>
+        <div class="table-responsive " style="overflow: scroll; height: 500px;">
+            <!--<caption>数据库数据</caption>-->
+            <table class="table table-striped table-sm">
                 <thead>
-                    <tr>
-                    <th>id</th>
-                    <th>省份</th>
-                    <th>城市</th>
-                    <th>名称</th>
-                    <th>城市代码</th>
-                    <th>区县</th>
-                    <th>地址</th>
-                    <th>经度</th>
-                    <th>纬度</th>
-                    <th>大类</th>
-                    <th>小类代码</th>
-                    <th>小类</th>
-                    <th>面积</th>
-                    <th>形状</th>
-                    <th>格式化经度</th>
-                    <th>格式化纬度</th>
-                    <th>格式化形状</th>
+                    <tr style="background-color: #5688ee;color: #fff;height: 35px;">
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">id</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">省份</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">城市</th>
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">名称</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">城市代码</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">区县</th>
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">地址</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">经度</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">纬度</th>
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">大类</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">小类代码</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">小类</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">面积</th>
+                    <th style="min-width: 200px;max-width: 250px;line-height: 30px;">形状</th>
+                    <!--<th style="min-width: 120px;max-width: 150px;">格式化经度</th>
+                    <th style="min-width: 120px;max-width: 150px;">格式化纬度</th>-->
+                    <!--<th style="min-width: 200px;max-width: 250px;">格式化形状</th>-->
                     </tr>
                 </thead>
+                <tbody>
                     {% for i in gaodemapscene %}
                         <tr>
                             <td>{{ i.id }}</td>
@@ -91,22 +85,30 @@
                             <td>{{ i.classify }}</td>
                             <td>{{ i.area }}</td>
                             <td>{{ i.shape }}</td>
-                            <td>{{ i.wgs_long }}</td>
+                            <!--<td>{{ i.wgs_long }}</td>
                             <td>{{ i.wgs_lat }}</td>
-                            <td>{{ i.wgs_shape }}</td>
+                            <td>{{ i.wgs_shape }}</td>-->
                         </tr>
                     {% endfor %}
-                </table>
-
-
-            </div>
+                </tbody>
+            </table>
+        </div>
     </form>
-    <form action="/download/",method="GET" style="">
-                        <input type="button" class="btn btn-primary"
-                        data-toggle="button" name="download" value="下载" onclick="location.href='{{ url_for('index.download1')}}'">
-                    </form>
+    <form action="/download/",method="GET" style="float: right;margin-top:10px;">
+        <input type="button" class="btn btn-primary" data-toggle="button" name="download" value="下载" onclick="location.href='{{ url_for('index.download1')}}'">
+    </form>
 </div>
-    <div class="content">
+    <div class="col-lg-6">
+        <div style="line-height: 40px;font-size: 18px;font-weight: bold;color:#5688ee;">地图展示</div>
+        <div class="content" style="height: 500px;">
+            <div class="graph">
+                <h1>
+                    {{ div |safe }}
+                </h1>
+            </div>
+        </div>
+    </div>
+<!--    <div class="content">
             <div class="graph">
                 <h1>
                     {{ div |safe }}
@@ -114,9 +116,9 @@
             </div>
 
 
-        </div>
+    </div>-->
 
-
+</div>
 <script>
     (function(){
         var pHtmlStr = '';
@@ -135,7 +137,6 @@
         });
         $("#province").change();
     })();
-
 </script>
 
 
