--- a/templates/login.html
+++ b/templates/login.html
@@ -2,21 +2,16 @@
 
 {% block title %}登录{% endblock %}
 
-{% block head %}
+{% block head %}{% endblock %}
 
-    <link rel="stylesheet" href="{{url_for('static',filename='css/login.css')}}">
-{% endblock %}                                   
 {% block main %}
-
-    <h3 class="page-title" style="margin-left: -700px">登录</h3>
+    <h3 class="page-title">登录</h3>
     <form method="POST">
         {{ form.csrf_token() }}
-        {{ form.username(class="form-control", placeholder="用户名") }} <br>
-        {{ form.password(class="form-control", placeholder="密码") }} <br>
-
-        <div class="form-submmit">
+        <div class="col-md-4 col-md-offset-4">
+            {{ form.username(class="form-control", placeholder="用户名") }} <br>
+            {{ form.password(class="form-control", placeholder="密码") }} <br>
             {{ form.submit(class="btn btn-primary btn-block") }} <br>
-
         </div>
     </form>
 {% endblock %}'
