--- a/static/css/index.css
+++ b/static/css/index.css
@@ -62,3 +62,24 @@ table caption{
 font-weight: bold}
 table td{word-break: keep-all;white-space:nowrap;}
 table thead{word-break: keep-all;white-space:nowrap;}*/
+.main{
+    width: 730px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0px;
+}
+.form-container01{
+    height: 300px;
+}
+.form-container02{
+
+    overflow-y:auto;
+    height: 500px;
+    margin: 0 auto;
+}
+.form-control{
+    margin-top: 15px;
+}
+.form-group.form-control{
+    margin-top: 0px;
+}
