--- a/templates/crawl.html
+++ b/templates/crawl.html
@@ -1,10 +1,224 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>在努力制作中</title>
-</head>
-<body>
-<h3>在努力制作中</h3>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}首页{% endblock %}
+
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/crawl.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/layui.css') }}">
+    <script src="{{ url_for('static',filename='js/city.js') }}" ></script>
+    <script src="{{ url_for('static',filename='js/plotly.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/layui.js') }}"></script>
+{% endblock %}
+
+{% block main %}
+<div class="search-main">
+    <div class="search" style="border-bottom: 2px solid #ddd;">
+        <form action="/" method="POST" class="form-inline">
+            <div class="form-group">
+                <label for="scenes">选择场景</label>
+                <select class="form-control" id="scenes" name="scene" >
+                    <option value="居民区">居民区</option>
+                    <option value="医院">医院</option>
+                    <option value="美食">美食</option>
+                    <option value="美景">美景</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="province">选择省份</label>
+                <select class="form-control" id="province" name="province" ></select>
+            </div>
+            <div class="form-group">
+                <label for="city">选择城市</label>
+                <select class="form-control" id="city" name="city"></select>
+            </div>
+            <input type="submit" class="btn btn-default" style="margin-top: -3px;">
+        </form>
+    </div>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes style="margin-top: 300px">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+<div class="col-lg-6" id="table1">
+    <form action="/" method="POST">
+        <div style="line-height: 40px;font-size: 18px;font-weight: bold;color:#5688ee;" id="table1">数据列表</div>
+        <div class="table-responsive " id="table1"  style="overflow: scroll; height: 500px;">
+            <!--<caption>数据库数据</caption>-->
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr style="background-color: #5688ee;color: #fff;height: 35px;">
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">id</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">省份</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">城市</th>
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">名称</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">城市代码</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">区县</th>
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">地址</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">经度</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">纬度</th>
+                    <th style="min-width: 120px;max-width: 150px;line-height: 30px;">大类</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">小类代码</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">小类</th>
+                    <th style="min-width: 80px;max-width: 100px;line-height: 30px;">面积</th>
+                    <th style="min-width: 200px;max-width: 250px;line-height: 30px;">形状</th>
+                    <!--<th style="min-width: 120px;max-width: 150px;">格式化经度</th>
+                    <th style="min-width: 120px;max-width: 150px;">格式化纬度</th>-->
+                    <!--<th style="min-width: 200px;max-width: 250px;">格式化形状</th>-->
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for i in gaodemapscene %}
+                        <tr>
+                            <td>{{ i.id }}</td>
+                            <td>{{ i.province }}</td>
+                            <td>{{ i.city }}</td>
+                            <td>{{ i.name }}</td>
+                            <td>{{ i.city_adcode }}</td>
+                            <td>{{ i.district}}</td>
+                            <td>{{ i.address }}</td>
+                            <td>{{ i.longtitude }}</td>
+                            <td>{{ i.lat }}</td>
+                            <td>{{ i.type }}</td>
+                            <td>{{ i.typecode }}</td>
+                            <td>{{ i.classify }}</td>
+                            <td>{{ i.area }}</td>
+                            <td>{{ i.shape }}</td>
+                            <!--<td>{{ i.wgs_long }}</td>
+                            <td>{{ i.wgs_lat }}</td>
+                            <td>{{ i.wgs_shape }}</td>-->
+                        </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </form>
+
+
+{#<form action="" method="POST">#}
+{#<div class="pages">#}
+{##}
+{#    <nav aria-label="Page navigation">#}
+{#      <ul class="pagination" style="margin: 10px 0;float: right;">#}
+{#        {% if paginate.has_prev %}#}
+{#            <li>#}
+{#              <a class="paginations" href="/?page={{ paginate.prev_num }}"  aria-label="Previous">#}
+{#                <span aria-hidden="true">&laquo;</span>#}
+{#              </a>#}
+{#            </li>#}
+{#        {% else %}#}
+{#            <li class="disabled">#}
+{#              <a href="#" aria-label="Previous">#}
+{#                <span aria-hidden="true">&laquo;</span>#}
+{#              </a>#}
+{#            </li>#}
+{#        {% endif %}#}
+{#        {% for page in paginate.iter_pages() %}#}
+{#            {% if paginate.number == page %}#}
+{#                <li>#}
+{#                    <a class="paginations" href="/?page={{ page }}" >{{ page }}</a>#}
+{#                </li>#}
+{#            {% else %}#}
+{#                <li>#}
+{#                    <a href="/?page={{ page }}">{{ page }}</a>#}
+{#                </li>#}
+{#            {% endif %}#}
+{#        {% endfor %}#}
+{#        {% if paginate.has_next %}#}
+{#            <li>#}
+{#              <a class="paginations" href="/?page={{ paginate.next_num }}"  aria-label="Next">#}
+{#                <span aria-hidden="true">&raquo;</span>#}
+{#              </a>#}
+{#            </li>#}
+{#        {% else %}#}
+{#            <li class="disabled">#}
+{#              <a href="#" aria-label="Next">#}
+{#                <span aria-hidden="true">&raquo;</span>#}
+{#              </a>#}
+{##}
+{#        {% endif %}#}
+{#      </ul>#}
+{#    </nav>#}
+{##}
+{#</div>#}
+{#</form>#}
+
+    <form action="/crawl/download/",method="GET" style="float: right;margin-top:10px;">
+        <input type="button" class="btn btn-primary" data-toggle="button" name="download" value="下载" onclick="location.href='{{ url_for('crawl.download1')}}'">
+    </form>
+</div>
+    <div class="col-lg-6">
+        <div style="line-height: 40px;font-size: 18px;font-weight: bold;color:#5688ee;">地图展示</div>
+        <div class="content" style="height: 500px;">
+            <div class="graph">
+                <h1>
+                    {{ div |safe }}
+                </h1>
+            </div>
+        </div>
+    </div>
+<!--    <div class="content">
+            <div class="graph">
+                <h1>
+                    {{ div |safe }}
+                </h1>
+            </div>
+
+
+    </div>-->
+
+</div>
+<script>
+    (function(){
+        var pHtmlStr = '';
+        for(var name in pc){
+            pHtmlStr = pHtmlStr + '<option>'+name+'</option>';
+        }
+        $("#province").html(pHtmlStr);
+        $("#province").change(function(){
+            var pname = $("#province option:selected").text();
+            var pHtmlStr = '';
+            var cityList = pc[pname];
+            for(var index in cityList){
+                pHtmlStr = pHtmlStr + '<option>'+cityList[index]+'</option>';
+            }
+            $("#city").html(pHtmlStr);
+        });
+        $("#province").change();
+    })();
+</script>
+
+
+</form>
+
+<script>
+layui.use(['laypage'], function(){
+  var laypage = layui.laypage;
+
+  laypage.render({
+    cont: 'table1',//容器。值支持id名、原生dom对象，jquery对象。
+     skin: '#4985d7',//可以自定义容器的颜色
+     pages: 10, //总页数
+     curr: 1, //初始化当前页
+      jump: function (obj, first) { //触发分页后的回调
+          if (!first) { //点击跳页触发函数自身，并传递当前页：obj.curr
+              searchFun(keyword, obj.curr);//查询主体方法
+          }
+      }
+  });
+ })
+</script>
+
+<script>
+$(function() {
+    $(".dropdown-toggle").dropdown('toggle');
+});
+</script>
+{% endblock %}
+
+
+
