poi平台19年初始版本上传

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-/* Required height of parents of the Full Page Carousel for proper displaying carousel itself */
+style.min.css/* Required height of parents of the Full Page Carousel for proper displaying carousel itself */
 html,
 body,
 .view {
