--- a/templates/analysis_new_mission.html
+++ b/templates/analysis_new_mission.html
@@ -1,160 +1,169 @@
-{% extends 'base.html' %}
-
-{% block title %}场景分析{% endblock %}
-
-{% block head %}
-
+<!DOCTYPE html>
+<html>
+  <head>
+	<meta charset="UTF-8">
+	<title>POI爬虫平台</title>
+	<meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/font.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/xadmin.css') }}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}" >
+    <link rel="stylesheet"  href="{{url_for('static',filename='css/base.css')}}">
     <link rel="stylesheet"  href="{{url_for('static',filename='css/analysis_new_mission.css')}}">
-
     <script src="{{ url_for('static',filename='js/city.js') }}" ></script>
-{% endblock %}
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='lib/layui/layui.js') }}" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/xadmin.js') }}"></script>
+    <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/bootstrap.min.js')}}" ></script>
+  </head>
+  <body>
+    <div class="x-body">
+      <div class="layui-row">
+        <div class="layui-fluid">
+              <div class="layui-col-sm12">
+                <div class="layui-card">
+                  <div class="layui-card-body">
+                      <form action="/analysis/upload"  enctype="multipart/form-data" method="POST">
+                        <input type="text" class="form-control col-lg-10" style="width: 50%;float: left" onkeydown="return false;" onpaste="return false;" id="file_name" placeholder="请上传工参...">
 
-{% block main %}
-
-<div class="search" >
-    <form action="/analysis/upload"  enctype="multipart/form-data" method="POST" style="margin-top: 10px;margin-left: 10px">
-    {#  <div class="form-group col-lg-8" style="margin-top: 10px;width: 100%">#}
-    {#    <label for="">&nbsp;&nbsp;&nbsp;请上传工参文件</label>#}
-    {#      <a class="a-upload" herf="#">#}
-{#              <input type="file" name="file">#}
-{#              <input type=submit value=Upload style="float: right;margin-top: -25px;margin-right: 600px">#}
-    <div class="input-group">
-                            <input type="text" class="form-control" onkeydown="return false;" onpaste="return false;" id="file_name" placeholder="请上传工参..." style="width: 50%">
-                            <label class="input-group-btn">
-                                <span class="btn btn-primary style-blue" style="margin-right: 5px;background-color: #5688ee;color: white">
-                                    浏览 <input type="file" name="file" accept="application/vnd.sealed-xls" style="display: none;" multiple onchange="document.getElementById('file_name').value=this.files[0].name">
+                                <span class="btn btn-primary" style="margin-left: 0px;background-color: #0DB3A6;color: white;border-color:#0DB3A6 ">
+                                    浏览 <input type="file" name="file" accept="text/csv" style="display: none;" multiple onchange="document.getElementById('file_name').value=this.files[0].name">
                                 </span>
-
-                                     <button type="submit"  class="btn btn-primary style-blue" style="margin-right: 5px;background-color: #5688ee;color: white">上传</button>
-
-                            </label>
-                        </div>
-        {#      </a>#}
-    {#      </div>#}
-    </form>
-</div>
-<div class="new_mission">
-    <form action="/analysis/new_mission_todos/" method="POST">
-        <div class="form-group col-lg-6" style="float: left; width: 33%;margin-top: 10px">
-                <label for="scenes" style="float: left;">选择场景</label>
-                    <select class="form-control col-lg-4" id="scenes" name="scene" >
-                        <option value="居民区">居民区</option>
-                        <option value="医院">医院</option>
-                        <option value="美食">美食</option>
-                        <option value="美景">美景</option>
-                    </select>
+                        <button class="btn btn-primary" name="submit" style="background-color: #0DB3A6;color: white;border-color:#0DB3A6 ">
+                            <span>上传</span>
+                        </button>
+{#                        <input type="file" name="file" style="line-height: normal">#}
+{#                        <input type=submit value=Upload style="float: right;margin-right: 600px;line-height: normal;margin-top: 10px">#}
+                    </form>
+                      <form action="/analysis/new_mission_todos/" method="POST">
+                          <div class="form-group col-lg-6" style="float: left; width: 33%;margin-top: 10px">
+                              <label for="scenes" style="float: left;" class="col-lg-4">选择场景</label>
+                              <select class="form-control col-lg-10" id="scenes" name="scene" >
+                                  <option value="居民区">居民区</option>
+                                  <option value="医院">医院</option>
+                                  <option value="美食">美食</option>
+                                  <option value="美景">美景</option>
+                              </select>
+                          </div>
+                          <div class="form-group col-lg-6" style="float: left; width: 33%;margin-top: 10px">
+                                  <label for="province" style="float: left;" class="col-lg-4">选择省份</label>
+                                  <select class="form-control col-lg-10" id="province" name="province" ></select>
+                              </div>
+                          <div class="form-group col-lg-6" style="float: left; width: 33%;margin-top: 10px">
+                                  <label for="city" class="col-lg-4" style="float: left;">选择城市</label>
+                                  <select class="form-control col-lg-10" id="city" name="city"></select>
+                              </div>
+                          <div class="form-group col-lg-6" style="float: left;">
+                              <label for="" class="col-lg-4" style="float: left;">张角α</label>
+                              <input class="form-control col-lg-8" id="" placeholder="60" style="width: 50%; text-align: right">
+                          </div>
+                          <div class="form-group col-lg-6" style="float: left;">
+                              <label for="" class="col-lg-4" style="float: left">搜索半径R1m</label>
+                              <input class="form-control col-lg-8" id="" placeholder="100" style="width: 50%; text-align: right">
+                          </div>
+                          <div class="form-group col-lg-6" style="float: left;">
+                              <label for="" class="col-lg-4" style="float: left">覆盖比例</label>
+                              <input class="form-control col-lg-8" id="" placeholder="50" style="width: 50%; text-align: right">
+                          </div>
+                          <div class="form-group col-lg-6" style="float: left;">
+                              <label for="" class="col-lg-4" style="float: left">搜索半径R2m</label>
+                              <input class="form-control col-lg-8" id="" placeholder="200" style="width: 50%; text-align: right">
+                          </div>
+                          <button type="submit" class="btn btn-default" style="margin-left: 15px;background-color: #0DB3A6;color: white;border-color:#0DB3A6">提交</button>
+                      </form>
+                  </div>
+                </div>
+              </div>
+              <div class="layui-col-sm12">
+                <div class="layui-card">
+                  <div class="layui-card-header">
+                    <caption>任务列表</caption>
+                  </div>
+                  <div class="layui-card-body">
+                      <form action="/analysis/new_mission_todos/" method="POST" >
+                          <table class="table table-striped table-sm">
+                              <thead>
+                                  <tr>
+                                      <td>序号</td>
+                                      <td>创建时间 </td>
+                                      <td>省份</td>
+                                      <td>用户</td>
+                                      <td>状态</td>
+                                      <td>操作</td>
+                                  </tr>
+                              </thead>
+                              {% for todo in todos %}
+                                  <tr>
+                                      <td>{{ todo.id }}</td>
+                                      <td>{{ todo.create_time }}</td>
+                                      <td>{{ todo.todo_city }}</td>
+                                      <td>{{ todo.author.username }}</td>
+                                      <td>
+                                          {% if todo.status %}
+                                              <span style="color: green">已完成</span>
+                                          {% else %}
+                                              <span style="color: red">未完成</span>
+                                          {% endif %}
+                                      </td>
+                                      <td>
+                                          <a href="/analysis/new_mission_todos/download/" class="btn btn-sm" role="button" style="background: #0DB3A6;color: white">
+                                              <span>下载</span>
+                                          </a>
+                                          <a href="/analysis/data_search" class="btn btn-sm" role="button" style="background: #0DB3A6;color: white">
+                                              <span>查看</span>
+                                          </a>
+                                      </td>
+                                  </tr>
+                              {% endfor %}
+                          </table>
+                      </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="page">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination" style="margin: 10px 0;float: right;">
+                        {% if paginate.has_prev %}
+                            <li>
+                                <a href="/analysis/new_mission_todos/?page={{ paginate.prev_num }}" aria-label="Previous" class="prev">
+                                    <span aria-hidden="true">&lt;&lt;</span>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="disabled">
+                                <a href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&lt;&lt;</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                        {% for page in paginate.iter_pages() %}
+                            <li>
+                                <a href="/analysis/new_mission_todos/?page={{ page }}" class="num">{{ page }}</a>
+                            </li>
+                        {% endfor %}
+                        {% if paginate.has_next %}
+                            <li>
+                                <a href="/analysis/new_mission_todos/?page={{ paginate.next_num }}" aria-label="Next">
+                                    <span aria-hidden="true">&gt;&gt;</span>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="disabled">
+                                <a href="#" aria-label="Next">
+                                    <span aria-hidden="true">&gt;&gt;</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <div class="form-group col-lg-6" style="float: left; width: 33%;margin-top: 10px">
-            <label for="province" style="float: left;">选择省份</label>
-            <select class="form-control col-lg-4" id="province" name="province" ></select>
-        </div>
-        <div class="form-group col-lg-6" style="float: left; width: 33%;margin-top: 10px">
-            <label for="city">选择城市</label>
-            <select class="form-control col-lg-4" id="city" name="city"></select>
-        </div>
-
-          <div class="form-group col-lg-6" style="float: left;">
-            <label for="" class="col-lg-4" style="float: left;">张角α</label>
-            <input type="" class="form-control col-lg-8" id="" placeholder="60" style="width: 50%; text-align: right">
-          </div>
-          <div class="form-group col-lg-6" style="float: left;">
-            <label for="" class="col-lg-4">搜索半径R1m</label>
-            <input type="" class="form-control" id="" placeholder="100" style="width: 50%; text-align: right">
-          </div>
-          <div class="form-group col-lg-6" style="float: left;">
-            <label for="" class="col-lg-4">覆盖比例</label>
-            <input type="" class="form-control" id="" placeholder="50" style="width: 50%; text-align: right">
-          </div>
-          <div class="form-group col-lg-6" style="float: right;">
-            <label for="" class="col-lg-4">搜索半径R2m</label>
-            <input type="" class="form-control" id="" placeholder="200" style="width: 50%; text-align: right">
-          </div>
-        <button type="submit" class="btn btn-default" style="margin-left: 15px;">提交</button>
-    </form>
-</div>
-<div class="task_list">
-    <form action="/analysis/new_mission_todos/" method="POST" >
-        <table class="table table-striped table-sm">
-            <caption>任务列表</caption>
-            <thead>
-                <tr>
-                    <td>序号</td>
-                    <td>创建时间 </td>
-                    <td>用户</td>
-                    <td>状态</td>
-                    <td>操作</td>
-                </tr>
-            </thead>
-                {% for todo in todos %}
-                    <tr>
-                        <td>{{ todo.id }}</td>
-                        <td>{{ todo.create_time }}</td>
-                        <td>{{ todo.author.username }}</td>
-                        <td>
-                            {% if todo.status %}
-                                    <span style="color: green">已完成</span>
-                            {% else %}
-                                    <span style="color: red">未完成</span>
-                            {% endif %}
-                        </td>
-                        <td>
-                            <a href="/analysis/new_mission_todos/download/" class="btn btn-sm btn-danger" role="button">
-                                <span>下载</span>
-                            </a>
-                            <a href="/analysis/data_search" class="btn btn-sm btn-danger" role="button">
-                                <span>查看</span>
-                            </a>
-                        </td>
-                    </tr>
-                {% endfor %}
-
-        </table>
-    </form>
-</div>
-<div class="pages">
-    <nav aria-label="Page navigation">
-      <ul class="pagination" style="margin: 10px 0;float: right;">
-        {% if paginate.has_prev %}
-            <li>
-              <a href="/analysis/new_mission_todos/?page={{ paginate.prev_num }}" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-        {% else %}
-            <li class="disabled">
-              <a href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-        {% endif %}
-        {% for page in paginate.iter_pages() %}
-{#            {% ifequal paginate.number page %}#}
-                <li>
-                    <a href="/analysis/new_mission_todos/?page={{ page }}">{{ page }}</a>
-                </li>
-{#            {% else %}#}
-{#                <li>#}
-{#                    <a href="/analysis/new_mission_todos/?page={{ page }}">{{ page }}</a>#}
-{#                </li>#}
-{#            {% endifequal %}#}
-        {% endfor %}
-        {% if paginate.has_next %}
-            <li>
-              <a href="/analysis/new_mission_todos/?page={{ paginate.next_num }}" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-        {% else %}
-            <li class="disabled">
-              <a href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-        {% endif %}
-      </ul>
-    </nav>
-</div>
-
+      </div>
+    </div>
+  </body>
 <script>
     (function(){
         var pHtmlStr = '';
@@ -173,14 +182,7 @@
         });
         $("#province").change();
     })();
-
 </script>
-
-
-
-</form>
-
-
 
 
 <script>
@@ -188,5 +190,4 @@ $(function() {
     $(".dropdown-toggle").dropdown('toggle');
 });
 </script>
-
-{% endblock %}
+</html>
