--- a/templates/cards.html
+++ b/templates/cards.html
@@ -1,21 +1,37 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+  <head>
+	<meta charset="UTF-8">
+	<title>POI爬虫平台</title>
+	<meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/font.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/xadmin.css') }}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}" >
+    <link rel="stylesheet"  href="{{url_for('static',filename='css/base.css')}}">
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='lib/layui/layui.js') }}" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/xadmin.js') }}"></script>
+    <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/bootstrap.min.js')}}" ></script>
+</head>
+  <body>
+    <div class="x-body">
+      <div class="layui-row">
 
-{% block title %}发布帖子{% endblock %}
-
-{% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/cards.css') }}">
-{% endblock %}
-
-{% block main %}
-    <h3 class="page-title">发布帖子</h3>
-    <form action="" method="post">
-        <div class="form-container">
-            {{ form.csrf_token() }}
-            {{ form.title(class="form-control", placeholder="请输入标题",type="text",style="width: 600px;margin-left: 238px;") }} <br>
-            <div class="form-group">
-                <textarea name="content" rows="10" placeholder="请输入内容" class="form-control" style="width: 600px;margin-left:238px;"></textarea>
+        <form action="" method="post">
+            <div class="form-container">
+                <h3 class="page-title" style="color: #009688">发布帖子</h3>
+                {{ form.csrf_token() }}
+                {{ form.title(class="form-control", placeholder="请输入标题",type="text",style="width: 600px;margin:0 auto;") }} <br>
+                <div class="form-group">
+                    <textarea name="content" rows="10" placeholder="请输入内容" class="form-control" style="width: 600px;margin:0 auto"></textarea>
+                </div>
+                {{ form.submit(class="btn btn-primary btn-block", style="width: 150px;margin:0 auto;border-color: #009688;background-color: #009688") }} <br>
             </div>
-            {{ form.submit(class="btn btn-primary btn-block", style="width: 150px;margin-left:688px;") }} <br>
-        </div>
-    </form>
-{% endblock %}
+        </form>
+      </div>
+    </div>
+  </body>
+</html>
