--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,13 +1,26 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+  <head>
+	<meta charset="UTF-8">
+	<title>POI爬虫平台</title>
+	<meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
 
-{% block title %}详情-{% endblock %}
-
-{% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/detail.css')}}">
-{% endblock %}
-
-{% block main %}
-    <h3 class="page-title" style="font-size: 40px">{{ note.title }}</h3>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/font.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/xadmin.css') }}">
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='lib/layui/layui.js') }}" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/xadmin.js') }}"></script>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}" >
+    <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/bootstrap.min.js')}}" ></script>
+    <link rel="stylesheet"  href="{{url_for('static',filename='css/base.css')}}">
+</head>
+  <body>
+    <div class="x-body">
+      <div class="layui-row">
+        <h3 class="page-title" style="font-size: 40px;color: #009688">{{ note.title }}</h3>
     <p class="note-info" style="text-align:center;">
         <span>作者:{{ note.author.username }}</span>
         <span class="note-time">&nbsp;&nbsp;&nbsp;&nbsp;时间:{{ note.create_time }}</span>
@@ -23,7 +36,7 @@
             <input type="hidden" name="note_id" value="{{ note.id }}">
         </div>
         <div class="from-group" style="text-align: right;">
-            <button class="btn btn-primary" style="margin-right: 108px">发表评论</button>
+            <button class="btn btn-primary" style="margin-right: 108px;border-color: #009688;background-color: #009688">发表评论</button>
         </div>
     </form>
     <ul class="comment-list">
@@ -37,4 +50,7 @@
             </li><hr>
         {% endfor %}
     </ul>
-{% endblock %}
+      </div>
+    </div>
+  </body>
+</html>
