--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,207 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}登录{% endblock %}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>登录</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Bootstrap core CSS -->
+  <link href="{{ url_for('static',filename='css/bootstrap.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static',filename='css/bootstrap.min.css')  }}" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="{{ url_for('static',filename='css/mdb.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static',filename='css/mdb.min.css') }}" rel="stylesheet">
+  <!-- Your custom styles (optional) -->
+{#  <link href="{{ url_for('static',filename='css/style.css') }}" rel="stylesheet">#}
+  <link href="{{ url_for('static',filename='css/style.min.css') }}" rel="stylesheet">
 
-{% block head %}{% endblock %}
+  <style type="text/css">
+    /* Necessary for full page carousel*/
+    html,
+    body,
+    header,
+    .view {
+      height: 100%;
+    }
 
-{% block main %}
-    <h3 class="page-title">登录</h3>
-    <form method="POST">
-        {{ form.csrf_token() }}
-        <div class="col-md-4 col-md-offset-4">
-            {{ form.username(class="form-control", placeholder="用户名") }} <br>
-            {{ form.password(class="form-control", placeholder="密码") }} <br>
-            {{ form.submit(class="btn btn-primary btn-block") }} <br>
+    /* Carousel*/
+    .carousel,
+    .carousel-item,
+    .carousel-item.active {
+      height: 100%;
+    }
+    .carousel-inner {
+      height: 100%;
+    }
+    .div{
+            width: 340px;
+            height: 340px;
+            background: rgba(0,0,0,.3);
+            position: fixed;
+            left: 50%;
+            top:50%;
+            z-index: 1;
+            margin-left: -170px;
+            margin-top: -170px;
+            box-shadow: 0px 0px 30px 2px #333;
+        }
+        .log{
+            width: 140px;
+            height: 60px;
+            z-index: 1;
+            background: url(../static/images/yd.png) no-repeat;
+            background-size: 100%;
+            margin:20px;
+            position: fixed;
+            top:20px;
+        }
+        .name{
+            width: 180px;
+            height: 80px;
+            margin:20px auto;
+            background: url(../static/images/name.png) no-repeat;
+            background-size: 100% 100%;
+        }
+      .form_dl{
+          margin-left: 24px;
+      }
+  </style>
+</head>
+
+<body>
+  <!-- data-ride="carousel" -->
+  <!--Carousel Wrapper-->
+  <div id="carousel-example-1z" class="carousel slide carousel-fade" style="height: 92.1%">
+    <!--Indicators-->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+    </ol>
+    <!--/.Indicators-->
+    <!--Slides-->
+    <div class="log"></div>
+  <div class="div">
+     <div class="name"></div>
+      <form method="POST" class="form_dl">
+
+          {{ form.csrf_token() }}
+        <span class="block input-icon input-icon-right">
+
+														</span>
+          {{ form.username(class="btn btn-outline-white btn-lg", placeholder="用户名", style="background: #fff !important;color:#000 !important;font-size: 14px;") }}
+{#          <i class="ace-icon fa fa-user"></i>#}
+          <br>
+        {{ form.password(class="btn btn-outline-white btn-lg", placeholder="密码", style="background: #fff !important;color:#000 !important; font-size: 14px;") }}
+{#          <i class="ace-icon fa fa-lock"></i>#}
+          <br>
+        {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+
+                        {% for message in messages %}
+                            <div class="alert " style="padding: 0px;margin-bottom: 0px;text-align: center;color: red;font-size: 12px;font-weight: 300;">
+
+                                <strong>{{ message }}</strong></div>
+                        {% endfor %}
+
+                    {% endif %}
+                {% endwith %}
+          {{ form.submit(class="btn btn-lg", style="background: #009688 !important;") }} <br>
+      </form>
+  </div>
+      <div class="carousel-inner" role="listbox">
+      <!--First slide-->
+      <div class="carousel-item active">
+        <div class="view">
+          <!--Video source-->
+          <video class="video-intro" autoplay loop muted>
+            <source src="{{ url_for('static',filename='images/ICON_VERSION7.mp4') }}" type="video/mp4" />
+          </video>
+          <!-- Mask & flexbox options-->
+          <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+          </div>
+          <!-- Mask & flexbox options-->
         </div>
-    </form>
-{% endblock %}'
+      </div>
+      <!--/First slide-->
+
+      <!--Second slide-->
+      <div class="carousel-item">
+{#        <div class="view" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/77.jpg'); background-repeat: no-repeat; background-size: cover;">#}
+        <div class="view">
+          <video class="video-intro" autoplay loop muted>
+            <source src="http://img95.699pic.com/videos/2016/09/18/b2057e14-c60a-4a3c-8ba9-68f1d59abd7d.mp4" type="video/mp4" />
+          </video>
+          <!-- Mask & flexbox options-->
+          <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+
+          </div>
+          <!-- Mask & flexbox options-->
+
+        </div>
+      </div>
+      <!--/Second slide-->
+
+      <!--Third slide-->
+      <div class="carousel-item">
+        <div class="view">
+
+          <!--Video source-->
+          <video class="video-intro" autoplay loop muted>
+              <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
+          </video>
+
+          <!-- Mask & flexbox options-->
+          <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+          </div>
+          <!-- Mask & flexbox options-->
+        </div>
+      </div>
+      <!--/Third slide-->
+    </div>
+    <!--/.Slides-->
+    <!--Controls-->
+    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    <!--/.Controls-->
+  </div>
+  <!--Footer-->
+
+  <footer class="page-footer text-center font-small wow fadeIn">
+    <!--Copyright-->
+    <div class="footer-copyright py-3" style="font-size: 0.9rem">
+      © 2018 中国移动设计院————网研中心
+    </div>
+    <!--/.Copyright-->
+  </footer>
+  <!--/.Footer-->
+
+  <!-- SCRIPTS -->
+  <!-- JQuery -->
+
+  <!-- Initializations -->
+  <script type="text/javascript" src="{{ url_for('static',filename='js/jquery-3.3.1.min.js') }}"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="{{ url_for('static',filename='js/popper.min.js') }}"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="{{ url_for('static',filename='js/bootstrap.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
+  <!-- MDB core JavaScript -->
+{#  <script type="text/javascript" src="{{ url_for('static',filename='js/mdb.js') }}"></script>#}
+  <script type="text/javascript" src="{{ url_for('static',filename='js/mdb.min.js') }}"></script>
+  <script type="text/javascript">
+    // Animations initialization
+    new WOW().init();
+  </script>
+</body>
+
+</html>
